[gd_scene load_steps=10 format=2]

[ext_resource path="res://main/ui/button_panel/creature_button_panel/CreatureButtonPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://main/ui/ui.gd" type="Script" id=2]
[ext_resource path="res://main/ui/theme/UI.tres" type="Theme" id=3]
[ext_resource path="res://main/ui/theme/style_box/Clear.tres" type="StyleBox" id=5]
[ext_resource path="res://main/ui/input_container/hotkey_container/hotkey_container.gd" type="Script" id=10]
[ext_resource path="res://main/ui/theme/font/SecondaryFont.tres" type="DynamicFont" id=11]
[ext_resource path="res://main/ui/input_container/button_container/party_button_container/party_button_container.gd" type="Script" id=12]
[ext_resource path="res://main/ui/input_container/button_container/text_button_container/text_button_container.gd" type="Script" id=13]
[ext_resource path="res://main/ui/effect_handler/EffectHandler.tscn" type="PackedScene" id=14]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
pop_out_party = NodePath("VBoxContainer/PopOutPartyContainer")
effect_handler = NodePath("EffectHandler")
action_selection = NodePath("VBoxContainer/ActionSelection")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -434.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionSelection" type="PanelContainer" parent="VBoxContainer"]
margin_left = 92.0
margin_top = 67.0
margin_right = 467.0
margin_bottom = 262.0
grow_vertical = 0
rect_min_size = Vector2( 375, 0 )
size_flags_horizontal = 6
size_flags_vertical = 10
custom_styles/panel = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ActionSelection"]
margin_left = 9.0
margin_top = 9.0
margin_right = 366.0
margin_bottom = 186.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/ActionSelection/VBoxContainer"]
margin_right = 357.0
margin_bottom = 15.0
text = "Skills"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ActionSelection/VBoxContainer"]
margin_top = 19.0
margin_right = 357.0
margin_bottom = 177.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer"]
margin_right = 351.0
margin_bottom = 158.0
size_flags_horizontal = 3

[node name="CreatureA" type="VBoxContainer" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 27.0
margin_right = -2.0
margin_bottom = -2.0
size_flags_horizontal = 3
size_flags_vertical = 10
script = ExtResource( 13 )
controller = NodePath("../../../../../..")
neighbor_type = "vertical"
button_names = [ "Attack", "Megido", "Origin Pulse", "Hellfire", "Glare", "Dragon Pulse" ]

[node name="Button2" type="Button" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer/TabContainer/CreatureA"]
margin_right = 347.0
margin_bottom = 15.0

[node name="Button3" type="Button" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer/TabContainer/CreatureA"]
margin_top = 19.0
margin_right = 347.0
margin_bottom = 34.0

[node name="Button4" type="Button" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer/TabContainer/CreatureA"]
margin_top = 38.0
margin_right = 347.0
margin_bottom = 53.0

[node name="Button5" type="Button" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer/TabContainer/CreatureA"]
margin_top = 57.0
margin_right = 347.0
margin_bottom = 72.0

[node name="Button6" type="Button" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer/TabContainer/CreatureA"]
margin_top = 76.0
margin_right = 347.0
margin_bottom = 91.0

[node name="Button7" type="Button" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer/TabContainer/CreatureA"]
margin_top = 95.0
margin_right = 347.0
margin_bottom = 110.0

[node name="Button8" type="Button" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer/TabContainer/CreatureA"]
margin_top = 114.0
margin_right = 347.0
margin_bottom = 129.0

[node name="CreatureN" type="VBoxContainer" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 27.0
margin_right = -2.0
margin_bottom = -2.0
size_flags_horizontal = 3
size_flags_vertical = 10
script = ExtResource( 13 )
controller = NodePath("../../../../../..")
neighbor_type = "vertical"
button_names = [ "Attack", "Megido", "Origin Pulse", "Hellfire", "Glare", "Dragon Pulse", "Back" ]

[node name="Button2" type="Button" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer/TabContainer/CreatureN"]
margin_right = 272.0
margin_bottom = 30.0

[node name="Button3" type="Button" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer/TabContainer/CreatureN"]
margin_top = 34.0
margin_right = 272.0
margin_bottom = 64.0

[node name="Button4" type="Button" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer/TabContainer/CreatureN"]
margin_top = 68.0
margin_right = 272.0
margin_bottom = 98.0

[node name="Button5" type="Button" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer/TabContainer/CreatureN"]
margin_top = 102.0
margin_right = 272.0
margin_bottom = 132.0

[node name="Button6" type="Button" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer/TabContainer/CreatureN"]
margin_top = 136.0
margin_right = 272.0
margin_bottom = 166.0

[node name="Button7" type="Button" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer/TabContainer/CreatureN"]
margin_top = 170.0
margin_right = 272.0
margin_bottom = 200.0

[node name="Button8" type="Button" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer/TabContainer/CreatureN"]
margin_top = 204.0
margin_right = 272.0
margin_bottom = 234.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer"]
margin_left = 353.0
margin_right = 357.0
margin_bottom = 158.0

[node name="ActionHotkeyContainer" type="VBoxContainer" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 2.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 10 )
controller = NodePath("../../../../../..")
hotkey_font = ExtResource( 11 )
hotkey_color = Color( 1, 1, 1, 1 )
hotkeys = {
"Check": "accept3",
"Use": "ui_accept"
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ActionSelection/VBoxContainer/HBoxContainer/PanelContainer/ActionHotkeyContainer"]

[node name="MainPanel" type="MarginContainer" parent="VBoxContainer"]
margin_top = 266.0
margin_right = 560.0
margin_bottom = 314.0
size_flags_vertical = 8
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MainPanel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 555.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainPanel/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 548.0
margin_bottom = 36.0

[node name="MainButtonContainer" type="HBoxContainer" parent="VBoxContainer/MainPanel/PanelContainer/VBoxContainer"]
margin_right = 546.0
margin_bottom = 15.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}
controller = NodePath("../../../../..")
button_names = [ "Party", "Skills", "Items", "Settings", "Quit" ]

[node name="Skills" type="Button" parent="VBoxContainer/MainPanel/PanelContainer/VBoxContainer/MainButtonContainer"]
margin_right = 133.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Skills"

[node name="Party" type="Button" parent="VBoxContainer/MainPanel/PanelContainer/VBoxContainer/MainButtonContainer"]
margin_left = 137.0
margin_right = 271.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Party"

[node name="Items" type="Button" parent="VBoxContainer/MainPanel/PanelContainer/VBoxContainer/MainButtonContainer"]
margin_left = 275.0
margin_right = 408.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Items"

[node name="MainMenu" type="Button" parent="VBoxContainer/MainPanel/PanelContainer/VBoxContainer/MainButtonContainer"]
margin_left = 412.0
margin_right = 546.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Main Menu"

[node name="Text" type="Label" parent="VBoxContainer/MainPanel/PanelContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 546.0
margin_bottom = 34.0

[node name="ActivePartyContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 318.0
margin_right = 560.0
margin_bottom = 318.0
size_flags_horizontal = 3
size_flags_vertical = 9
custom_constants/separation = 2
script = ExtResource( 12 )
controller = NodePath("../..")
button_scene = ExtResource( 1 )

[node name="PopOutPartyContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 322.0
margin_right = 560.0
margin_bottom = 434.0
size_flags_horizontal = 3
size_flags_vertical = 8
custom_styles/panel = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PopOutPartyContainer"]
margin_left = 9.0
margin_top = 9.0
margin_right = 551.0
margin_bottom = 103.0

[node name="Label" type="Label" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer"]
margin_right = 542.0
margin_bottom = 15.0
text = "Party"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 542.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer/HBoxContainer"]
margin_right = 424.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_vertical_enabled = false

[node name="FullPartyContainer" type="HBoxContainer" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer/HBoxContainer/ScrollContainer"]
margin_right = 608.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 12 )
controller = NodePath("../../../../../..")
button_scene = ExtResource( 1 )
full_party = true

[node name="CreatureButtonPanel" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer/HBoxContainer/ScrollContainer/FullPartyContainer" instance=ExtResource( 1 )]
margin_top = 10.0
margin_right = 149.0
margin_bottom = 75.0

[node name="CreatureButtonPanel2" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer/HBoxContainer/ScrollContainer/FullPartyContainer" instance=ExtResource( 1 )]
margin_left = 153.0
margin_top = 10.0
margin_right = 302.0
margin_bottom = 75.0

[node name="CreatureButtonPanel3" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer/HBoxContainer/ScrollContainer/FullPartyContainer" instance=ExtResource( 1 )]
margin_left = 306.0
margin_top = 10.0
margin_right = 455.0
margin_bottom = 75.0

[node name="CreatureButtonPanel4" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer/HBoxContainer/ScrollContainer/FullPartyContainer" instance=ExtResource( 1 )]
margin_left = 459.0
margin_top = 10.0
margin_right = 608.0
margin_bottom = 75.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer/HBoxContainer"]
margin_left = 428.0
margin_right = 542.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 75 )
size_flags_horizontal = 9
size_flags_vertical = 3

[node name="PartySelectHotKeyContainer" type="VBoxContainer" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer/HBoxContainer/PanelContainer"]
visible = false
margin_left = 2.0
margin_top = 2.0
margin_right = 112.0
margin_bottom = 63.0
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 10
size_flags_vertical = 3
custom_constants/separation = 2
script = ExtResource( 10 )
controller = NodePath("../../../../../..")
hotkey_font = ExtResource( 11 )
hotkey_color = Color( 1, 1, 1, 1 )
hotkeys = {
"Confirm": "ui_accept"
}

[node name="PartyHotKeyContainer" type="VBoxContainer" parent="VBoxContainer/PopOutPartyContainer/VBoxContainer/HBoxContainer/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 112.0
margin_bottom = 73.0
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 10
size_flags_vertical = 3
custom_constants/separation = 2
script = ExtResource( 10 )
controller = NodePath("../../../../../..")
hotkey_font = ExtResource( 11 )
hotkey_color = Color( 1, 1, 1, 1 )
hotkeys = {
"Check": "ui_accept",
"Delete": "accept2",
"Return": "accept3",
"Summon": "accept4"
}

[node name="EffectHandler" parent="." instance=ExtResource( 14 )]
default_fade_time = 0.1
